modified:   README.md 	modified:   package-lock.json 	modified:   package.json 	modified:   public/site.webmanifest 	new file:   src/app/(dashboard)/dashboard/(services)/compare/page.tsx 	new file:   src/app/(dashboard)/dashboard/(services)/friends/page.tsx 	modified:   src/app/(dashboard)/dashboard/billing/page.tsx 	modified:   src/app/(dashboard)/dashboard/components/profile-form-input.tsx 	modified:   src/app/(dashboard)/dashboard/components/profiles-form.tsx 	new file:   src/app/(dashboard)/dashboard/components/side-menu.tsx 	modified:   src/app/(dashboard)/dashboard/layout.tsx 	modified:   src/app/(dashboard)/dashboard/page.tsx 	modified:   src/app/(dashboard)/dashboard/profiles/codechef/page.tsx 	modified:   src/app/(dashboard)/dashboard/profiles/codeforces/page.tsx 	modified:   src/app/(dashboard)/dashboard/profiles/components/profile-card.tsx 	modified:   src/app/(dashboard)/dashboard/profiles/leetcode/page.tsx 	modified:   src/app/(marketing)/page.tsx 	modified:   src/app/(marketing)/pricing/page.tsx 	modified:   src/app/api/og/route.tsx 	modified:   src/app/api/profiles/codechef/route.ts 	modified:   src/app/api/profiles/codeforces/route.ts 	modified:   src/app/api/profiles/leetcode/route.ts 	modified:   src/app/layout.tsx 	modified:   src/components/user-account-nav.tsx 	modified:   src/config/dashboard.ts 	modified:   src/config/site.ts

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "rcsen-next-template",
+  "name": "dsa-demon",
   "version": "0.2.0",
   "private": true,
   "author": {
-    "name": "rcsen-next-template",
+    "name": "dsa-demon",
     "url": "https://twitter.com/rohansen856"
   },
   "scripts": {
