--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.2.2",
+    "jotai": "^2.8.0",
     "lucide-react": "^0.359.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
