modified:   .env.example 	modified:   next.config.mjs 	modified:   src/app/(dashboard)/dashboard/(services)/friends/components/add-friend-button.tsx 	modified:   src/app/(dashboard)/dashboard/(services)/friends/components/search-user.tsx 	modified:   src/app/(dashboard)/dashboard/(services)/groups/components/group-join-button.tsx 	modified:   src/components/shared/site-footer.tsx

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,25 @@
 # -----------------------------------------------------------------------------
 # App
 # -----------------------------------------------------------------------------
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # -----------------------------------------------------------------------------
 # Authentication (NextAuth.js)
 # -----------------------------------------------------------------------------
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_ACCESS_TOKEN=
 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 # -----------------------------------------------------------------------------
-# Database (MySQL - PlanetScale)
+# Database (PostgreSQL)
 # -----------------------------------------------------------------------------
-DATABASE_URL="mysql://root:root@localhost:3306/template?schema=public"
+DATABASE_URL=
 
 # -----------------------------------------------------------------------------
 # Email (Postmark)
@@ -34,6 +37,14 @@ STRIPE_WEBHOOK_SECRET=
 STRIPE_PRO_MONTHLY_PLAN_ID=
 
 # -----------------------------------------------------------------------------
+# Ai chatbot (gemini)
+# -----------------------------------------------------------------------------
+GEMINI_API_KEY=
+GOOGLE_API_KEY=
+
+# -----------------------------------------------------------------------------
 # Api Routed
 # -----------------------------------------------------------------------------
 LEETCODE_API_ROUTE=
+CODEFORCES_API_ROUTE=
+CODEFORCES_RATING_ROUTE=
